<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="RS232_Return" Id="{14784ccd-180e-4f00-999c-4adae0fe2661}">
    <Declaration><![CDATA[TYPE RS232_Return :
STRUCT
	inLenght : INT;
	overrunError : BOOL;
	framingError : BOOL;
	parityError : BOOL;
	bufferFull : BOOL;
	initAccepted : BOOL;
	receiveRequest : BOOL;
	transmitAccepted : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>